Fixed visibility problems of disabled inputs on Chrome
FEA: ItEr70S04BugFixing

--- a/navalplanner-webapp/src/main/webapp/common/css/navalplan_zk.css
+++ b/navalplanner-webapp/src/main/webapp/common/css/navalplan_zk.css
@@ -1554,3 +1554,8 @@ display:none;
     background: #ABCDE1;
     color: white;
 }
+
+input.z-spinner-text-disd,
+input.z-datebox-text-disd {
+    color: #000000 !important;
+}
